--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
 							<div class="overlay">
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
-										<div class="col-sm-4">
-											<img src="images/about-me.jpg" class="img-fluid" alt="Portrait of me" style="border-radius: 20%; width: 100%; height: auto;">
+										<div class="col-sm-">
+											<img src="images/about-me.jpg" class="img-fluid" alt="Portrait of me" style="border-radius: 20%;overflow: hidden; box-shadow: 0 0 20px rgba(239, 226, 226, 0.947); width: 100%; height: auto;">
 										</div>
 										  
 									</div>
