--- a/index.html
+++ b/index.html
@@ -896,8 +896,7 @@
 					<h3 class="mb-4">Download Resume</h3>
 					<p>
 						<a 
-							href="https://drive.google.com/file/d/1Fo3gQBxN-UmQXu9Hfvuw8i13TCmwrcm7/view?usp=sharing" 
-							style="text-decoration: none; color: #007bff; transition: all 0.3s ease;"
+							href="https://drive.google.com/file/d/1Fo3gQBxN-UmQXu9Hfvuw8i13TCmwrcm7/view?usp=sharing"style="text-decoration: none; color: #007bff; transition: all 0.3s ease;"
 							onmouseover="this.style.textShadow='0 0 50px rgba(0, 123, 255, 0.7)';" 
 							onmouseout="this.style.textShadow='none';"
 						>
