--- a/index.html
+++ b/index.html
@@ -966,6 +966,16 @@
 								<span class="icon-youtube" style="font-size: 24px;"></span>
 							</a>
 						</li>
+						<li class="ftco-animate">
+							<a 
+								href="https://www.instagram.com/vishal_patil_05_16?igsh=MWN5aTEyM3Vidzk3aA==" 
+								style="display: inline-block; transition: all 0.3s ease; text-decoration: none;"
+								onmouseover="this.style.textShadow='0 0 50px rgba(255, 0, 0, 0.7)';" 
+								onmouseout="this.style.textShadow='none';"
+							>
+								<span class="icon-instagram" style="font-size: 24px;"></span>
+							</a>
+						</li>
 						<!-- 
 						<li class="ftco-animate"><a href=""><span class="icon-instagram"></span></a></li> 
 						-->
