--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 			<div class="col-md-6 text-center ftco-animate">
 				<p>
 				
-					<a href="https://drive.google.com/file/d/1Fo3gQBxN-UmQXu9Hfvuw8i13TCmwrcm7/view?usp=sharing" class="btn btn-primary py-3 px-4" 
+					<a href="https://drive.google.com/file/d/1aLc76ADugA7Qsqqi5gOsWj83Wsvbo0mW/view?usp=sharing" class="btn btn-primary py-3 px-4" 
 				  					 style="position: relative; display: inline-block; text-decoration: none;color: #fff; padding: 10px 20px;"
 				   					onmouseover="this.style.boxShadow='0 0 20px #fff, 0 0 30px #ff007f, 0 0 40px #ff007f, 0 0 50px #ff007f, 0 0 60px #ff007f, 0 0 70px #ff007f'; this.style.textDecoration='none'; this.style.color='#fff';"
 				   					onmouseout="this.style.boxShadow='none';">
@@ -879,7 +879,7 @@
 						<span class="icon-paper-plane" style="font-size: 36px; color: #007bff;"></span>
 					</div>
 					<h3 class="mb-4">Email Address</h3>
-					<p><a href="mailto:vishup3232@gmail.com" style="text-decoration: none; color: #007bff;">vishup3232@gmail.com</a></p>
+					<p><a href="https://mail.google.com/mail/u/?authuser=vishup3232@.COM" style="text-decoration: none; color: #007bff;">vishup3232@gmail.com</a></p>
 				</div>
 			</div>
 		
@@ -896,7 +896,7 @@
 					<h3 class="mb-4">Download Resume</h3>
 					<p>
 						<a 
-							href="https://drive.google.com/file/d/1Fo3gQBxN-UmQXu9Hfvuw8i13TCmwrcm7/view?usp=sharing"style="text-decoration: none; color: #007bff; transition: all 0.3s ease;"
+							href="https://drive.google.com/file/d/1aLc76ADugA7Qsqqi5gOsWj83Wsvbo0mW/view?usp=sharing"style="text-decoration: none; color: #007bff; transition: all 0.3s ease;"
 							onmouseover="this.style.textShadow='0 0 50px rgba(0, 123, 255, 0.7)';" 
 							onmouseout="this.style.textShadow='none';"
 						>
