--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 			<div class="col-md-4 d-flex ftco-animate">
 			  
 				<div class="blog-entry justify-content-end" style="background: rgba(158, 178, 173, 0.534); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;" onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';" onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
-					<a href="https://github.com/patilvishu" class="block-20 zoom-effect" style="background-image: url('images/doc.jpg');">
+					<a href="https://github.com/Vishal-sawnat-16" class="block-20 zoom-effect" style="background-image: url('images/doc.jpg');">
 					</a>
 					<div class="text mt-3 float-right d-block">
 					  <h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Online Document Sharing System</a></h3>
@@ -708,7 +708,7 @@
 			
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end" style="background: rgba(158, 178, 173, 0.534); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;" onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';" onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
-				  <a href="https://github.com/patilvishu" class="block-20 zoom-effect" style="background-image: url('images/face.jpg');">
+				  <a href="https://github.com/Vishal-sawnat-16" class="block-20 zoom-effect" style="background-image: url('images/face.jpg');">
 				  </a>
 				  <div class="text mt-3 float-right d-block">
 					<h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Face Recognition System for Attendance Management</a></h3>
@@ -736,7 +736,7 @@
 		  <div class="row d-flex">
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end" style="background: rgba(158, 178, 173, 0.534); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;" onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';" onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
-				  <a href="https://github.com/patilvishu" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+				  <a href="https://github.com/Vishal-sawnat-16" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
 				  </a>
 				  <div class="text mt-3 float-right d-block">
 					<h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Tourism Software</a></h3>
