--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 style="margin-bottom: 20px; color: #ffffff;">Rate My Work</h2>
+                <h2 style="margin-bottom: 20px; color: #ffffff;"></h2>
 				<br>
                 <div class="rating" style="display: inline-block;">
                     <a href="#" onclick="setRating(1)" style="text-decoration: none;">
