--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
 
 			  <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry" style="background: rgba(158, 178, 173, 0.534); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;" onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';" onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
-				  <a href="https://www.linkedin.com/in/vishal-patil-8344bb252/" class="block-20 zoom-effect" style="background-image: url('images/exam.jfif');">
+				  <a href="https://github.com/Vishal-sawnat-16?tab=repositories" class="block-20 zoom-effect" style="background-image: url('images/exam.jfif');">
 				  </a>
 				  <div class="text mt-3 float-right d-block">
 					<h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Exam Portal</a></h3>
@@ -749,7 +749,7 @@
 			
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry" style="background: rgba(158, 178, 173, 0.534); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;" onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';" onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
-				  <a href="https://www.linkedin.com/in/vishal-patil-8344bb252/" class="block-20 zoom-effect" style="background-image: url('images/coch.jfif');">
+				  <a href="https://github.com/Vishal-sawnat-16?tab=repositories" class="block-20 zoom-effect" style="background-image: url('images/coch.jfif');">
 				  </a>
 				  <div class="text mt-3 float-right d-block">
 					<h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Online Coaching Courses</a></h3>
