--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 					<h2>Data Entry Specialist</h2>
 					<span class="position">FirstCry Industry (Chakan)</span><br>
 					<span class="date">2018</span>
-					<p class="mt-4">Improved database reliability and reduced data entry errors by 40% over 5 months through precise data entry and error correction in collaboration with QC and audit teams.</p>
+					<p class="mt-4">Improved database reliability and reduced data entry errors by 40% over 5 months through precise data entry and error correction in collaboration with QC and audit teams.leading to improved efficiency across departments.</p>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -605,7 +605,7 @@
 					<h2>Machine Coordinator</h2>
 					<span class="position">Britannia Industries Ltd (Ranjangaon)</span><br>
 					<span class="date">2019</span>
-					<p class="mt-4">Executed quality control processes to ensure product standards.</p>
+					<p class="mt-4">Executed comprehensive quality control processes to ensure adherence to product standards, resulting in consistent product quality. Collaborated with cross-functional teams to identify and rectify potential issues proactively. Implemented regular audits and feedback loops to maintain high-quality benchmarks and continuously improve processes.</p>
 				</div>
 			</div>
 		</div>
@@ -881,7 +881,7 @@
 						<span class="icon-phone2" style="font-size: 36px; color: #007bff;"></span>
 					</div>
 					<h3 class="mb-4">Contact Number</h3>
-					<p><a href="tel://7083323299" style="text-decoration: none; color: #007bff;">+ 91 708 3323 399</a></p>
+					<p><a href="tel://7083323299" style="text-decoration: none; color: #007bff;">+ 91 708 3323 299</a></p>
 				</div>
 			</div>
 		
