--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@ h2 span {
                     <div class="block-18">
                         <div class="text">
                             <strong class="number" data-number="10" style="font-size: 2rem; font-weight: bold; display: block; margin-bottom: 10px;">0</strong>
-                            <span style="font-size: 0.9rem; display: block;">Achievements</span>
+                            <span style="font-size: 0.9rem; display: block;">Achievement</span>
                         </div>
                     </div>
                 </div>
@@ -895,7 +895,8 @@ h2 span {
                     <div class="block-18">
                         <div class="text">
                             <strong class="number" data-number="4" style="font-size: 2rem; font-weight: bold; display: block; margin-bottom: 10px;">0</strong>
-                            <span style="font-size: 0.9rem; display: block;">Worked with Companies</span>
+                            <span style="font-size: 0.9rem; display: block;"> Companies
+							</span>
                         </div>
                     </div>
                 </div>
@@ -905,7 +906,7 @@ h2 span {
                     <div class="block-18">
                         <div class="text">
                             <strong class="number" data-number="20" style="font-size: 2rem; font-weight: bold; display: block; margin-bottom: 10px;">0</strong>
-                            <span style="font-size: 0.9rem; display: block;">Cups of coffee</span>
+                            <span style="font-size: 0.9rem; display: block;">CopOfCoffe</span>
                         </div>
                     </div>
                 </div>
