--- a/index.html
+++ b/index.html
@@ -916,32 +916,32 @@ h2 span {
 </section>
 		
 	
-	  <div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-			<!-- <div class="container"> -->
-				<div class="row justify-content-center">
-					<div class="col-md-7 ftco-animate text-center">
-						<h2>More on <span> Github  </span> </h2>
-						<div class="heading">
-							<h4>I love to solve business problems &amp; uncover hidden data stories</h4>
-							<br>
-							<p>
-								<a 
-									href="https://github.com/Vishal-sawnat-16?tab=repositories" 
-									class="btn btn-primary py-3 px-5" 
-									style="transition: all 0.3s ease;"
-									onmouseover="this.style.boxShadow='0 0 50px rgba(0, 123, 255, 0.7)'; this.style.transform='scale(1.05)';"
-									onmouseout="this.style.boxShadow='none'; this.style.transform='scale(1)';"
-								>
-									GitHub
-								</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				
-			<!-- </div> -->
-		</div>
-	</section>
+<div class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg); background-size: cover; background-position: center;">
+    <div class="row justify-content-center">
+        <div class="col-md-7 ftco-animate text-center" style="padding: 50px 0;">
+            <h2 style="color: white; font-size: 2.5rem; margin-bottom: 20px;">More on <span style="color: #007bff;">Github</span></h2>
+            <div class="heading">
+                <h4 style="color: white; font-size: 1.2rem; margin-bottom: 30px;">I love to solve business problems &amp;<br>uncover hidden data stories</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="display: flex; justify-content: center; width: 100%;">
+    <p style="margin: 0;">
+        <a   
+            href="https://github.com/Vishal-sawnat-16?tab=repositories"   
+            class="btn btn-primary- py-3 px-5"   
+            style="color: white; background-color: #007bff; border: none; border-radius: 30px; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 0 10px rgb(237, 179, 146);"
+							onmouseover="this.style.backgroundColor='#0056b3'; this.style.boxShadow='0 0 30px rgba(0, 123, 255, 0.7)';" 
+							onmouseout="this.style.backgroundColor='#007bff'; this.style.boxShadow='0 0 10px rgba(0, 0, 0, 0.2)';"
+        >  
+            Github  
+        </a>
+    </p>
+</div>
+
+
 
 
 <!-- Contact-->
