--- a/index.html
+++ b/index.html
@@ -926,15 +926,15 @@ h2 span {
         </div>
     </div>
 </div>
-
+<br><br>
 <div style="display: flex; justify-content: center; width: 100%;">
     <p style="margin: 0;">
         <a   
             href="https://github.com/Vishal-sawnat-16?tab=repositories"   
             class="btn btn-primary- py-3 px-5"   
-            style="color: white; background-color: #007bff; border: none; border-radius: 30px; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 0 10px rgb(237, 179, 146);"
-							onmouseover="this.style.backgroundColor='#0056b3'; this.style.boxShadow='0 0 30px rgba(0, 123, 255, 0.7)';" 
-							onmouseout="this.style.backgroundColor='#007bff'; this.style.boxShadow='0 0 10px rgba(0, 0, 0, 0.2)';"
+            style="color: white; background-color: #007bff; border: none; border-radius: 30px; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 0 50px rgba(255, 252, 252, 0.811); display: inline-block;"
+            onmouseover="this.style.backgroundColor='#0056b3'; this.style.boxShadow='0 0 20px rgba(0, 123, 255, 0.7)';"   
+            onmouseout="this.style.backgroundColor='#007bff'; this.style.boxShadow='0 0 50px rgba(255, 252, 252, 0.811)';"
         >  
             Github  
         </a>
