--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ h2 span {
 							</script>
 						</h2>
 						<br>
-						<span class="position" style="display: block; color: #00bcd4;"onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';" onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">Qynext Softech Services Pvt. Ltd, Pune</span><br>
+						<span class="position" style="display: block; color: #00bcd4;>Qynext Softech Services Pvt. Ltd, Pune</span><br>
 						<span class="date">2021 - 22 &amp; 2024</span>
 						<p class="mt-4">During my BSc final semester, I developed an online course platform using React.js and MySQL in collaboration with Qynext Softech Services during an internship. This project led to a 30% increase in user engagement and significant enhancements in learning outcomes, alongside improvements in document management efficiency and information access across departments.</p>
 					</div>
