--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ h2 span {
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 										<div class="col-sm-">
-											<img src="images/about-me.jpg" class="img-fluid" alt="Portrait of me" style="border-radius: 20%;overflow: hidden; box-shadow: 0 0 20px rgba(239, 226, 226, 0.947); width: 100%; height: auto;">
+											<img src="images/vishal 2.png" class="img-fluid" alt="Portrait of me" style="border-radius: 20%;overflow: hidden; box-shadow: 0 0 20px rgba(239, 226, 226, 0.947); width: 100%; height: auto;">
 										</div>
 										  <br>
 									</div>
@@ -675,7 +675,7 @@ h2 span {
 							</script>
 						</h2>
 						<br>
-						<span class="position" style="display: block; color: #00bcd4;>Qynext Softech Services Pvt. Ltd, Pune</span><br>
+						<span class="position" style="display: block; color: #00bcd4;">Qynext Softech Services Pvt. Ltd, Pune</span><br>
 						<span class="date">2021 - 22 &amp; 2024</span>
 						<p class="mt-4">During my BSc final semester, I developed an online course platform using React.js and MySQL in collaboration with Qynext Softech Services during an internship. This project led to a 30% increase in user engagement and significant enhancements in learning outcomes, alongside improvements in document management efficiency and information access across departments.</p>
 					</div>
