--- a/index.html
+++ b/index.html
@@ -460,20 +460,20 @@ h2 span {
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2 style="margin-bottom: 20px; color: #ffffff;"></h2>
-				<p style="margin-top: 20px; text-align: center;">
-					<a href="https://www.linkedin.com/in/vishal-patil-8344bb252/" class="btn btn-white btn-outline-white py-3 px-4"
-					   style="position: relative; display: inline-block; text-decoration: none; transition: all 0.3s ease-in-out; color: #fff; padding: 10px 20px; margin-left: 10px;"
+				<div style="margin-top: 20px; text-align: center; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+					<a href="https://www.linkedin.com/in/vishal-patil-8344bb252/" class="btn btn-white btn-outline-white"
+					   style="position: relative; display: inline-block; text-decoration: none; transition: all 0.3s ease-in-out; color: #fff; padding: 10px 20px; min-width: 150px; margin: 10px 0;"
 					   onmouseover="this.style.boxShadow='0 0 20px #fff, 0 0 30px #ff007f, 0 0 40px #ff007f, 0 0 50px #ff007f, 0 0 60px #ff007f, 0 0 70px #ff007f'; this.style.textDecoration='none'; this.style.color='#fff';"
 					   onmouseout="this.style.boxShadow='none';">
 						My LinkedIn
 					</a>
-					<a href="https://github.com/Vishal-sawnat-16" class="btn btn-white btn-outline-white py-3 px-4"
-					   style="position: relative; display: inline-block; text-decoration: none; transition: all 0.3s ease-in-out; color: #fff; padding: 10px 20px; margin-right: 10px;"
+					<a href="https://github.com/Vishal-sawnat-16" class="btn btn-white btn-outline-white"
+					   style="position: relative; display: inline-block; text-decoration: none; transition: all 0.3s ease-in-out; color: #fff; padding: 10px 20px; min-width: 150px; margin: 10px 0;"
 					   onmouseover="this.style.boxShadow='0 0 20px #fff, 0 0 30px #ff007f, 0 0 40px #ff007f, 0 0 50px #ff007f, 0 0 60px #ff007f, 0 0 70px #ff007f'; this.style.textDecoration='none'; this.style.color='#fff';"
 					   onmouseout="this.style.boxShadow='none';">
 						My Github
 					</a>
-				</p>
+				</div>
 				
                 <br>
                 <div class="rating" style="display: inline-block;">
@@ -972,6 +972,42 @@ h2 span {
                     </div>
                 </div>
             </div>
+			<br>
+
+			<div class="row glass-effect">
+                <!-- Third Experience Item -->
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="resume-wrap ftco-animate"
+                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #00000039; border-radius: 5px; margin: 10px;"
+                        onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';"
+                        onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
+                        <!-- Job Title -->
+                        <h2>Order Processing</h2>
+                        <span class="position">Yashwant Abrasives (Chakan)</span><br>
+                        <span class="date">2019</span>
+                        <!-- Job Description -->
+                        <p class="mt-4">Improved order accuracy to 95% by streamlining processes.
+							Reduced processing time by 10% over nine months.
+							Ensured efficient and accurate order handling.
+							Demonstrated exceptional organizational and problem-solving skills.</p>
+                    </div>
+                </div>
+			</div>
+                <!-- Fourth Experience Item 
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="resume-wrap ftco-animate"
+                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #00000039; border-radius: 5px; margin: 10px;"
+                        onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';"
+                        onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
+                        ----------- Job Title 
+                        <h2>Machine Coordinator</h2>
+                        <span class="position">Britannia Industries Ltd (Ranjangaon)</span><br>
+                        <span class="date">2019</span>
+                        -------------Job Description 
+                        <p class="mt-4">Executed comprehensive quality control processes to ensure adherence to product standards, resulting in consistent product quality. Collaborated with cross-functional teams to identify and rectify potential issues proactively. Implemented regular audits and feedback loops to maintain high-quality benchmarks and continuously improve processes.</p>
+                    </div>
+                </div>
+            </div>-->
             <br><br><br>
 
             <!-- Education Section -->
