--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@ h2 span {
                     </div>
                 </div>
             </div>-->
-            <br><br><br>
+            <br><br><br><br>
 
             <!-- Education Section -->
             <div class="">
@@ -1028,15 +1028,14 @@ h2 span {
                 <!-- Horizontal Line -->
                 <div class="underline"></div>
                 <br><br>
-            </div>
-
+            </div> 
             <!-- Education Items -->
             <div class="glass-effect">
                 <div class="row">
                     <!-- First Education Item -->
                     <div class="col-md-6">
                         <div class="resume-wrap ftco-animate">
-                            <span class="date">2022-2024</span>
+                            <span class="date">2022 - 2024</span>
                             <h2>Master of Computer Application</h2>
                             <span class="position">R.C. Patel Edu Trusts Institute of Management Research and Development</span>
                             <p class="mt-4">Shirpur</p>
@@ -1045,10 +1044,28 @@ h2 span {
                     <!-- Second Education Item -->
                     <div class="col-md-6">
                         <div class="resume-wrap ftco-animate">
-                            <span class="date">2019-2022</span>
+                            <span class="date">2019 - 2022</span>
                             <h2>Bachelor of Computer Science</h2>
                             <span class="position">Moolji Jaitha College, Khandesh College Education Society</span>
                             <p class="mt-4">Jalgaon</p>
+                        </div>
+                    </div>
+					<div class="col-md-6">
+                        <div class="resume-wrap ftco-animate">
+                            <span class="date">20118</span>
+                            <h2>12 th Central Board of Secondary Education </h2>
+                            <span class="position">Jawahar Navodaya Vidyalaya, Sakegaon, Bhusawal
+							</span>
+                            <p class="mt-4">Jalgaon</p>
+                        </div>
+                    </div>
+					<div class="col-md-6">
+                        <div class="resume-wrap ftco-animate">
+                            <span class="date">20118</span>
+                            <h2>10 th Central Board of Secondary Education </h2>
+                            <span class="position">Jawahar Navodaya Vidyalaya, <br> Nakane 
+							</span>
+                            <p class="mt-4">Dhule</p>
                         </div>
                     </div>
                 </div>
