--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@ h2 span {
                         <div class="resume-wrap ftco-animate">
                             <span class="date">2019 - 2022</span>
                             <h2>Bachelor of Computer Science</h2>
-                            <span class="position">Moolji Jaitha College, Khandesh College Education Society</span>
+                            <span class="position">Moolji Jaitha College, Khandesh College Education <br> Society</span>
                             <p class="mt-4">Jalgaon</p>
                         </div>
                     </div>
