--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ h2 span {
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target glass-effects" id="ftco-navbar">
 	<div class="container">
 	  <!-- Navbar Brand -->
-	  <a class="navbar-brand" href="index.html">Portfolio's </a>
+	  <a class="navbar-brand" href="index.html">Portfolio </a>
   
 	  <!-- Navbar Toggler for Mobile -->
 	  <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -362,9 +362,9 @@ h2 span {
                             <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax="properties: { translateY: '70%' }" style="padding: 10px;">
                                 <div class="text">
                                     <!-- Vertical spacing for content -->
-                                    <br><br><br><br>
+                                    <br><br><br><br><br><br><br>
                                     <!-- Subheading -->
-                                    <span class="subheading"><h3>Hello!</h3></span>
+                                    <span class="subheading"><h2>Hello!</h2></span>
                                     <!-- Main heading with glowing effect -->
                                     <h1 class="mb-4 mt-3">
                                         <span id="name-glow" style="color: #ff9800; text-shadow: 0 0 5px #ff5900, 0 0 15px #ff0000; position: relative; display: inline-block; font-size: 2em; animation: floating 5s infinite;">
@@ -430,14 +430,22 @@ h2 span {
                                     <!-- Additional vertical spacing -->
 									<br><br>
 									<!-- Subtitle with white glow effect -->
-									<h3 style="color: #ffffff; text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ffffff;">
+									<h2 style="color: #eb930e; text-shadow: 0 0 10px #ff1e00, 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #04ebfb;">
 										A Developer
-									</h3>
+									</h2>
 									<!-- Additional vertical spacing -->
-									<br><br>
+									
+                                    <h2 style="color: #ffffff; text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff,  0 0 50px #ffffff;">
+										Where.
+									</h2>
 									<!-- Subtitle with white glow effect -->
 									<h2 style="color: #ffffff; text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff,  0 0 50px #ffffff;">
-										Where Logic Becomes Magic.
+									    Logic Becomes
+									</h2>
+                                    <!-- Subtitle with white glow effect -->
+                                     
+                                    <h2 style="color: #ffffff; text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff,  0 0 50px #ffffff;">
+									    Magic.
 									</h2>
 									<!-- Additional vertical spacing -->
 									<br><br><br>
@@ -487,34 +495,38 @@ h2 span {
                             cursor: pointer;
                             animation: floating 2s infinite;
                         ">C</span>
-                    </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
+                    </a>
+                    <a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
                             cursor: pointer;
                             animation: floating 3s infinite;
                         ">T</span>
-                    </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
+                    </a>
+                    <a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc,#ffffff, 0 0 30px #ffffff,  0 0 50px #ffffff;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
                             cursor: pointer;
                             animation: floating 4s infinite;
                         ">R</span>
-                    </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
+                    </a>
+                    <a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
                             cursor: pointer;
                             animation: floating 5s infinite;
                         ">L</span>
-                    </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
+                    </a>
+                    <a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
                             font-size: 4rem;
                             color: #ccc;
@@ -534,7 +546,7 @@ h2 span {
                         ">C</span>
                     </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size:6ch;
                             color: #ccc;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
@@ -544,7 +556,7 @@ h2 span {
                     </a>
                     <a href="#" onclick="setRating(2)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="2" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc,#ffffff, 0 0 30px #ffffff,  0 0 50px #ffffff;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
@@ -554,7 +566,7 @@ h2 span {
                     </a>
 					<a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
@@ -581,7 +593,7 @@ h2 span {
                         ">C</span>
                     </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size:6ch;
                             color: #ccc;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
@@ -590,7 +602,7 @@ h2 span {
                         ">R</span>
                     </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc,#ffffff, 0 0 30px #ffffff,  0 0 50px #ffffff;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
@@ -599,7 +611,7 @@ h2 span {
                         ">E</span>
                     </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size:6ch;
                             color: #ccc;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
@@ -608,7 +620,7 @@ h2 span {
                         ">A</span>
                     </a><a href="#" onclick="setRating(1)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="1" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc,#ffffff, 0 0 30px #ffffff,  0 0 50px #ffffff;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
@@ -618,13 +630,13 @@ h2 span {
                     </a>
                     <a href="#" onclick="setRating(3)" style="text-decoration: none;">
                         <span class="floating-word" data-rating="3" style="
-                            font-size: 4rem;
+                            font-size: 6ch;
                             color: #ccc;
                             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
                             display: inline-block;
                             cursor: pointer;
                             animation: floating 1s infinite;
-                        ">E.</span>
+                        ">E</span>
                     </a>
                 </div>     
             </div>
@@ -1300,9 +1312,6 @@ h2 span {
 </div>
 
 
-
-
-
                          <!-- Contact Section -->
 <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
     <div class="container">
@@ -1534,20 +1543,6 @@ h2 span {
 	</div>
   </div>
   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- footer-->
 <footer class="ftco-footer ftco-section">
