--- a/index.html
+++ b/index.html
@@ -366,13 +366,13 @@ h2 span {
                                     <!-- Vertical spacing for content -->
                                     <br><br><br><br><br><br><br>
                                     <!-- Subheading -->
-                                    <span class="subheading"><h2>Hello!</h2></span>
+                                    <span class="subheading"><h3>Hello!</h3></span>
                                     <!-- Main heading with glowing effect -->
-                                    <h1 class="mb-4 mt-3">
+                                    <h2 class="mb-4 mt-3">
                                         <span id="name-glow" style="color: #ff9800; text-shadow: 0 0 5px #ff5900, 0 0 15px #1561d2; position: relative; display: inline-block; font-size: 2em; animation: floating 3s infinite; font-family: Georgia, serif;">
-                                            Vishal Patil
+                                            Vishal D. Patil
                                         </span>
-                                    </h1>
+                                    </h2>
                                     
 
                                     <!-- Element to contain animated typing -->
