--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ h2 span {
                                     <span class="subheading"><h3>Hello!</h3></span>
                                     <!-- Main heading with glowing effect -->
                                     <h2 class="mb-4 mt-3">
-                                        <span id="name-glow" style="color: #ff9800; text-shadow: 0 0 5px #ff5900, 0 0 15px #1561d2; position: relative; display: inline-block; font-size: 2em; animation: floating 3s infinite; font-family: Georgia, serif;">
+                                        <span id="name-glow" style="color: #ff9800; text-shadow: 0 0 5px #ff5900, 0 0 20px #008cffe0,0 0 30px #dcddde; position: relative; display: inline-block; font-size: 2em; animation: floating 3s infinite; font-family: Georgia, serif;">
                                             Vishal D. Patil
                                         </span>
                                     </h2>
