--- a/index.html
+++ b/index.html
@@ -895,11 +895,11 @@ h2 span {
             <!-- Experience Items
              
             -->
-            <div class="row glass-effect">
+            <div class="row glass-effect" >
                 <!-- First Experience Item -->
                 <div class="col-md-6 d-flex align-items-center">
                     <div class="resume-wrap ftco-animate"
-                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 5px; margin: 10px;"
+                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 20px; margin: 10px;"
                         onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';"
                         onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
                         <!-- Job Title with Dynamic Color -->
@@ -922,14 +922,14 @@ h2 span {
                         <br>
                         <span class="date">2024</span>
                         <!-- Job Description -->
-                        <p class="mt-4">Co-developed an online course platform with a team using React.js and MySQL at Numetry Technologies, resulting in a 30% increase in user engagement and a 20% improvement in learning outcomes while leveraging full-stack development skills to enhance overall system performance and user experience.</p>
+                        <p class="mt-4">Co-developed an online course platform with a team using React.js and MySQL at Numetry Technologies, resulting in a 30% increase in user engagement and a 20% improvement in learning outcomes while leveraging full-stack development skills to enhance overall system performance and user experience. <br><br></p>
                     </div>
                 </div>
                 
                 <!-- Second Experience Item -->
                 <div class="col-md-6 d-flex align-items-stretch">
                     <div class="resume-wrap ftco-animate"
-                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 5px; margin: 10px;"
+                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 20px; margin: 10px;"
                         onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';"
                         onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
                         <!-- Job Title with Dynamic Color -->
@@ -951,7 +951,7 @@ h2 span {
                         <!-- Job Details -->
                         <span class="position"
                             style="display: block; color: #00bcd4;">Qynext Softech Services Pvt. Ltd, Pune</span><br>
-                        <span class="date">2021 - 22 &amp; 2024</span>
+                        <span class="date">2021  &amp; 2024</span>
                         <!-- Job Description -->
                         <p class="mt-4">During my BSc final semester, I developed an online course platform using React.js and MySQL in collaboration with Qynext Softech Services during an internship. This project led to a 30% increase in user engagement and significant enhancements in learning outcomes, alongside improvements in document management efficiency and information access across departments.</p>
                     </div>
@@ -959,11 +959,11 @@ h2 span {
             </div>
             <br>
             <!-- More Experience Items -->
-            <div class="row glass-effect">
+            <div class="row glass-effect" >
                 <!-- Third Experience Item -->
-                <div class="col-md-6 d-flex align-items-stretch">
+                <div class="col-md-6 d-flex align-items-stretch" >
                     <div class="resume-wrap ftco-animate"
-                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 5px; margin: 10px;"
+                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 20px; margin: 10px;"
                         onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';"
                         onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
                         <!-- Job Title -->
@@ -977,7 +977,7 @@ h2 span {
                 <!-- Fourth Experience Item -->
                 <div class="col-md-6 d-flex align-items-stretch">
                     <div class="resume-wrap ftco-animate"
-                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 5px; margin: 10px;"
+                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 20px; margin: 10px;"
                         onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';"
                         onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
                         <!-- Job Title -->
@@ -995,7 +995,7 @@ h2 span {
                 <!-- Third Experience Item -->
                 <div class="col-md-6 d-flex align-items-stretch">
                     <div class="resume-wrap ftco-animate"
-                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000ea; border-radius: 5px; margin: 10px;"
+                        style="flex: 1; padding: 20px; box-sizing: border-box; background: #000000; border-radius: 20px; margin: 10px;"
                         onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)';"
                         onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)';">
                         <!-- Job Title -->
@@ -1047,11 +1047,11 @@ h2 span {
                 <br><br>
             </div> 
             <!-- Education Items -->
-            <div class="glass-effect" style="background: rgba(255, 255, 255, 0.2); border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+            <div class="glass-effect" style="background: rgba(255, 255, 255, 0.2); border-radius: 40px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                 <div class="row">
                     <!-- First Education Item -->
                     <div class="col-md-6">
-                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;">
+                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;border-radius: 20px;">
                             <span class="date">2022 - 2024</span>
                             <h2>Master of Computer Application</h2>
                             <span class="position">R.C. Patel Edu Trusts Institute of Management Research and  <br> Development</span>
@@ -1060,15 +1060,16 @@ h2 span {
                     </div>
                     <!-- Second Education Item -->
                     <div class="col-md-6">
-                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;">
+                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;border-radius: 20px;">
                             <span class="date">2019 - 2022</span>
                             <h2>Bachelor of Computer Science</h2>
-                            <span class="position">Moolji Jaitha College, Khandesh College Education <br> Society</span>
-                            <p class="mt-4">Jalgaon</p>
+                            <span class="position">Moolji Jaitha College, Khandesh College Education <br> Society (NMU)</span>
+
+                            <p class="mt-4"> Jalgaon</p>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;">
+                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;border-radius: 20px;">
                             <span class="date">2018</span>
                             <h2>12 th Central Board of Secondary Education </h2>
                             <span class="position">Jawahar Navodaya Vidyalaya, Sakegaon, Bhusawal</span>
@@ -1076,7 +1077,7 @@ h2 span {
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;">
+                        <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;border-radius: 20px;">
                             <span class="date">2018</span>
                             <h2>10 th Central Board of Secondary Education </h2>
                             <span class="position">Jawahar Navodaya Vidyalaya, <br> Nakane</span>
